Revert "Added CLI Interaction thing."
This reverts commit 7e58bcdd64ed4db9b83c25503bd0c118a38dc0cf.